# liquidctl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.md  MANIFEST.in  README.md  SECURITY.md  appveyor.yml  conftest.py  cycle.py  liquidctl-completion.sh  liquidctl.8  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  bug_report.yml  config.yml  help-request.yml  new-device.yml  new-driver-request.md  new_device.md  other.md  other.yml
docs/: README.md  aquacomputer-d5next-guide.md  aquacomputer-farbwerk-guide.md  aquacomputer-farbwerk360-guide.md  aquacomputer-octo-guide.md  aquacomputer-quadro-guide.md  asetek-690lc-guide.md  asetek-690lc.md  asetek-pro-guide.md  asus-aura-led-guide.md  asus-gpu-guide.md  asus-rog-ryujin-guide.md  asus-ryujin-guide.md  asus-ryujin3-guide.md  asus-ryuo-guide.md  binary_release.md  coolit-guide.md  corsair-commander-core-guide.md  corsair-commander-duo-guide.md  corsair-commander-guide.md  corsair-commander.md  corsair-hxi-rmi-psu-guide.md  corsair-hxi-rmi.md  corsair-platinum-and-pro-xt-coolers.md  corsair-platinum-pro-xt-guide.md  ddr4-guide.md  fourth-generation-krakens.md  gigabyte-castor3-guide.md  gigabyte-rgb-fusion2-guide.md  kraken-x2-m2-guide.md  kraken-x3-z3-2023-guide.md  kraken-x3-z3-guide.md  lian-li-ga-ii-lcd-guide.md  lian-li-hydroshift-guide.md  lianli-uni-guide.md  msi-mpg-coreliquid-guide.md  nvidia-guide.md  nzxt-control-hub.md  nzxt-e-series-psu-guide.md  nzxt-hue2-guide.md  (+10 more)
extra/: 71-liquidctl-uaccess.rules  71-liquidctl.rules  coreliquid_ctl  ensure-compat-1.0.0  evga_clc_examples.sh  installer-licenses.txt  kraken_one_examples.sh  krakencurve-poc  krakenduty-poc  krakenduty-poc.py  liquiddump  liquiddump.py  liquidexport  prometheus-liquidctl-exporter  prometheus-liquidctl-exporter.py  redist-notices.txt  release-checklist.md  yoda  yoda.py
liquidctl/: __init__.py  __main__.py  cli.py  control.py  elevate.py  error.py  export.py  keyval.py  pmbus.py  util.py  version.py
tests/: _testutils.py  test_api.py  test_aquacomputer.py  test_asetek.py  test_asetek_pro.py  test_asus_rog_ryujin.py  test_asus_ryujin.py  test_asus_ryuo.py  test_asus_strix.py  test_aura_led.py  test_backward_compatibility_10.py  test_backward_compatibility_11.py  test_backward_compatibility_112.py  test_backward_compatibility_12.py  test_backward_compatibility_13.py  test_backward_compatibility_14.py  test_backward_compatibility_15.py  test_backward_compatibility_18.py  test_backward_compatibility_asus_ryujin.py  test_backwards_compatibility_10.py  test_backwards_compatibility_11.py  test_backwards_compatibility_12.py  test_backwards_compatibility_13.py  test_backwards_compatibility_14.py  test_backwards_compatibility_15.py  test_cli.py  test_comander_pro.py  test_commander_core.py  test_commander_duo.py  test_commander_pro.py  test_config_loading.py  test_config_parsing.py  test_config_validation.py  test_control_hub.py  test_coolit.py  test_corsair_hid_psu.py  test_corsair_platinum.py  test_ddr4.py  test_enermax_liqtech_xtr.py  test_ga2_lcd.py  (+23 more)
(+140 files in other folders)
