[metadata]
name = liquidctl
url = https://github.com/liquidctl/liquidctl
description = Cross-platform tool and drivers for liquid coolers and other devices
long_description = file: extra/dist/pypi-readme.md
long_description_content_type = text/markdown
author = Jonas Malaco
author_email = jonas@protocubo.io
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: System :: Hardware :: Hardware Drivers
keywords =
  cli
  corsair
  cross-platform
  driver
  evga
  fan-controller
  gigabyte
  hue2
  kraken
  led-controller
  liquid-cooler
  nzxt
  power-supply
  smart-device
project_urls:
  Documentation = https://github.com/liquidctl/liquidctl/blob/main/README.md
  Changelog = https://github.com/liquidctl/liquidctl/blob/main/CHANGELOG.md
  Source = https://github.com/liquidctl/liquidctl

[options]
packages = find:
pythons_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
  colorlog
  docopt
  hidapi
  pyusb
  libusb-package; sys_platform == 'win32' or sys_platform == 'cygwin'
  smbus; sys_platform == "linux"

[options.entry_points]
console_scripts =
  liquidctl = liquidctl.cli:main
