[metadata]
name = liquidctl
url = https://github.com/liquidctl/liquidctl
description = Cross-platform tool and drivers for liquid coolers and other devices
long_description = file: extra/dist/pypi-readme.md
long_description_content_type = text/markdown
author = Jonas Malaco
author_email = jonas@protocubo.io
license = GPL-3.0-or-later
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.14
  Programming Language :: Python :: 3.13
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.10
  Topic :: System :: Hardware :: Hardware Drivers
keywords =
  aio
  aquacomputer
  asus
  clc
  cli
  corsair
  cross-platform
  dram
  driver
  evga
  fan-controller
  gigabyte
  hue2
  kraken
  led-controller
  liquid-cooler
  nzxt
  power-supply
  smart-device
project_urls =
  Documentation = https://github.com/liquidctl/liquidctl/blob/main/README.md
  Changelog = https://github.com/liquidctl/liquidctl/blob/main/CHANGELOG.md
  Source = https://github.com/liquidctl/liquidctl

[options]
packages = find:
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
  colorlog
  crcmod==1.7
  docopt
  hidapi
  pyusb
  pillow
  libusb-package; sys_platform == 'win32' or sys_platform == 'cygwin'
  winusbcdc>=1.5; sys_platform == 'win32'
  smbus; sys_platform == "linux"

[options.entry_points]
console_scripts =
  liquidctl = liquidctl.cli:main
